<resources>
    <string name="app_name">Huqariq</string>
    <string name="close_sesion">Salir</string>
    <string name="textBtnFaceLogin">ENTRAR CON FACEBOOK</string>

    <string name="facebook_app_id">2153291008247539</string>
    <string name="fb_login_protocol_scheme">fb2153291008247539</string>
    <string name="label_forget_password">¿Olvidaste tu contraseña?</string>
    <string name="label_welcome">Bienvenido!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_app_login">Quechua App</string>
    <string name="label_correo_electronico">Correo Electrónico</string>
    <string name="label_pass">Contraseña</string>
    <string name="button_Login_in">Entrar</string>

    <string name="mensaje_no_tiene_cuenta">¿No tiene cuenta? Registrese</string>

    <string name="edit_text_hint_correo_electronico">Correo Electrónico</string>
    <string name="edit_text_hint_correo_contrasenia">Contraseña</string>
    <string name="edit_text_hint_repeat_correo_contrasenia">Repetir Contraseña</string>

    <string name="edit_text_hint_numero_documento">Número de Documento</string>
    <string name="edit_text_hint_numero_telefono">Teléfono</string>
    <string name="et_hint_escribe">Escribe para empezar ...</string>
    <string name="registro_message_ya_tienes_cuenta">¿Ya tiene cuenta? Entrar</string>
    <string name="content_description">Description</string>

    <string name="splash_activity_loading">Cargando…</string>

    <string name="registro_message_error_confirme_contrasena">Las contraseñas no coinciden</string>
    <string name="registro_message_error_ingrese_correo_electronico">Por favor ingrese un correo electrónico</string>
    <string name="registro_message_error_correo_electronico_invalido">Correo electrónico inválido</string>
    <string name="registro_message_error_ingrese_contrasena_usuario">Ingrese una contraseña</string>
    <string name="registro_message_error_repeat_usuario">Contraseñas no Coinciden</string>

    <string name="registro_message_error_mensaje_contribuyente_nulo">Usted no es contribuyente</string>
    <string name="registro_message_error_ingrese_apellido_paterno">Ingrese apellido paterno</string>
    <string name="registro_message_error_ingrese_apellido_materno">Ingrese apellido materno</string>
    <string name="registro_message_error_ingrese_nombres">Ingrese nombres</string>
    <string name="registro_message_error_formato_dni">Formato de DNI incorrecto</string>
    <string name="registro_message_error_formato_phone">Formato de Telefono incorrecto</string>
    <string name="register_select_region">Debe seleccionar una Region</string>
    <string name="message_need_permission">Necesita aceptar los permisos para poder continuar</string>
    <string name="message_acept_permission">Ahora ya puede continuar, por favor vuelva a intentar</string>

    <string name="register_select_province">Debe seleccionar una Provincia</string>
    <string name="register_select_district">Debe seleccionar un Distrito</string>

    <string name="dialog_close">Cerrar</string>
    <string name="dialog_acept">Aceptar</string>

    <string name="message_ya_registrado">ya registrado</string>
    <string name="registro_message_error_campo_vacio">No puede dejar este campo vacío</string>
    <string name="registro_message_error_correo_anterior">Correo registrado anteriormente</string>
    <string name="message_fail_login">Login incorrecto</string>
    <!-- handling errors -->
    <string name="generic_server_down">El servidor no está disponible en este momento, por favor inténtelo otra vez en unos minutos</string>
    <string name="no_internet">No se encuentra conectado a internet, por favor revise su conexión y vuelva a intentarlo.</string>
    <string name="generic_error">Lo sentimos no hemos podido realizar su petición. Por favor inténtelo otra vez en unos minutos</string>
    <string name="login_facebook_error">Lo sentimos no hemos podido crear su cuenta usando Facebook. Por favor inténtelo otra vez en unos minutos</string>
    <string name="error_login">Usuario o Contraseña Erroneos</string>
    <string name="error_register">Los datos ingresados ya fueron previamente registrados</string>

    <string name="edit_text_hint_name">Nombres</string>
    <string name="edit_text_hint_surname">Apellidos</string>
    <string name="edit_text_hint_dni">DNI</string>

    <string name="view_form_register_step_one_message_mail_not_in_user">Correo electrónico disponible</string>
    <string name="view_invalid_form_mail">No tiene formato de correo electrónico</string>
    <string name="view_form_register_step_one_message_mail_in_use">Correo eletrónico en uso</string>
    <string name="default_error_server">No eres tu somos nosotros</string>

    <string name="view_form_register_step_two_documento_in_use">Número de documento se encuentra en uso</string>
    <string name="view_form_register_step_two_documento_not_in_use">Número de documento disponible</string>
    <string name="view_form_register_step_two_document_incorrect_Format">DNI inválido</string>
    <string name="instruction_record">
        1. Antes de grabar escuche la locución.\n2. Para iniciar pulse el botón GRABAR y para terminar pulse el botón FINALIZAR.\n3. Puede enviar 1 a 1 los audios, o en grupo"
    </string>

    <string name="title_record">
        Grabación de Voz (Quechua)
    </string>
    <string name="next_record">
    Siguiente
</string>

    <string name="send_record">
    ENVIAR AUDIOS
</string>

    <string name="message_loading_dialog">
        Cargando…
    </string>

    <string name="view_register_next_button">Siguiente</string>
    <string name="view_register_next_back">Atras</string>
    <string name="view_register_complete_buttom">Hecho</string>
    <string name="register_listen_question_one">Escuchar Pregunta 1</string>
    <string name="register_listen_question_two">Escuchar Pregunta 2</string>
    <string name="register_listen_question_three">Escuchar Pregunta 3</string>
    <string name="register_listen_question_Four">Escuchar Pregunta 4</string>
    <string name="register_listen_question_Five">Escuchar Pregunta 5</string>


    <string name="download_consentiment">Descargar</string>
    <string name="play_consentiment">Escuchar</string>

    <string name="message_error_question">
Lamentablemente usted no ha respondido correctamente varias de las preguntas realizadas, usted no puede continuar. Pero no se desanime, usted aún puede ayudarnos, le animamos a que registre a una persona quechuahablante, ¡MIL Gracias!
    </string>

</resources>


