<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_box_cantidad_canasta"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"

        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:padding="40dp" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp">


            <TextView
                android:id="@+id/etError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:visibility="gone" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_account"
                android:drawablePadding="10dp"
                android:hint="@string/label_correo_electronico"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:paddingTop="18dp"
                android:paddingRight="8dp"
                android:paddingBottom="12dp" />


            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:drawablePadding="10dp"
                android:hint="@string/label_pass"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:paddingTop="18dp"
                android:paddingRight="8dp"
                android:paddingBottom="12dp"
                android:autofillHints="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/button_Login_in"
                android:theme="@style/AccentButtonStyles"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id='@+id/btnRegistro'
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mensaje_no_tiene_cuenta"
                    android:textColor="#F79521"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/label_forget_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="@string/label_welcome"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id='@+id/btbLoginFace'
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_face_64dp"/>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_twiter_64dp" />
            </LinearLayout>


            <!-- android:theme="@style/WhiteButtonStyle" -->

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>




