<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
   >
    <ScrollView
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Escucha las siguientes preguntas y respondelas, recuerda que solo tienes una oportunidad"
                android:layout_marginBottom="@dimen/normal_space"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                >

                <Button android:id="@+id/questionOneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_listen_question_one"
                    android:drawableEnd="@drawable/ic_volume"
                    android:drawablePadding="8dp"
                    />

                <RadioGroup
                    android:id="@+id/radioGroupQuestionOne"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                </RadioGroup>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                >

                <Button android:id="@+id/questionTwoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_listen_question_two"
                    android:drawableEnd="@drawable/ic_volume"
                    android:drawablePadding="8dp"
                    />

                <RadioGroup
                    android:id="@+id/radioGroupQuestionTwo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                </RadioGroup>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                >

                <Button android:id="@+id/questionThreeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_listen_question_three"
                    android:drawableEnd="@drawable/ic_volume"
                    android:drawablePadding="8dp"
                    />

                <RadioGroup
                    android:id="@+id/radioGroupQuestionThree"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                </RadioGroup>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                >

                <Button android:id="@+id/questionFourButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_listen_question_Four"
                    android:drawableEnd="@drawable/ic_volume"
                    android:drawablePadding="8dp"
                    />

                <RadioGroup
                    android:id="@+id/radioGroupQuestionFour"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                </RadioGroup>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                >

                <Button android:id="@+id/questionFiveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_listen_question_Five"
                    android:drawableEnd="@drawable/ic_volume"
                    android:drawablePadding="8dp"
                    />

                <RadioGroup
                    android:id="@+id/radioGroupQuestionFive"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>




    </ScrollView>








</androidx.constraintlayout.widget.ConstraintLayout>