<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/normal_space"
    android:padding="@dimen/normal_space"
    >


    <FrameLayout
        android:id="@+id/validMailStatusFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/mailTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mailTextInputLayout"
        app:layout_constraintTop_toTopOf="@+id/mailTextInputLayout">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/checkMailImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:src="@drawable/ic_check_green"
            android:contentDescription="@string/content_description" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/errorMailImageView"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_red"
            android:contentDescription="@string/content_description" />

        <ProgressBar
            android:id="@+id/loadServiceMailProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="24dp" />
    </FrameLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mailTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/validMailStatusFrame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/mailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/edit_text_hint_correo_electronico"
            android:inputType="textEmailAddress"
            android:lineSpacingMultiplier="1"
            android:maxLines="1"
            android:autofillHints="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mailTextInputLayout">


        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:maxLines="1"
            android:focusableInTouchMode="true"
            android:hint="@string/edit_text_hint_correo_contrasenia"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passTextRepeatInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passTextInputLayout">


        <EditText
            android:id="@+id/passRepeatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:maxLines="1"
            android:focusableInTouchMode="true"
            android:hint="@string/edit_text_hint_repeat_correo_contrasenia"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <FrameLayout
        android:id="@+id/validNumberDocumentStatusFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputDni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputDni"
        app:layout_constraintTop_toTopOf="@+id/textInputDni">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/checkNumberDocumentImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:src="@drawable/ic_check_green"
            android:contentDescription="@string/content_description" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/errorNumberDocumentImageView"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_red"
            android:contentDescription="@string/content_description" />

        <ProgressBar
            android:id="@+id/loadServiceNumberDocumentProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="24dp" />
    </FrameLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/validNumberDocumentStatusFrame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTextRepeatInputLayout">


        <EditText
            android:id="@+id/etDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/edit_text_hint_dni"
            android:inputType="phone"
            android:lineSpacingMultiplier="1"
            android:maxLines="1"
            android:autofillHints="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputDni">



        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_name"
            android:maxLines="1"
            android:singleLine="true"

            android:id="@+id/nameEditText"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_surname"
            android:singleLine="true"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>